[gd_scene load_steps=10 format=2]

[ext_resource path="res://Arena/Assets/tournament_bg.jpg" type="Texture" id=1]
[ext_resource path="res://Arena/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://Arena/DemonPool.tscn" type="PackedScene" id=3]
[ext_resource path="res://Arena/Assets/Alberich.png" type="Texture" id=4]
[ext_resource path="res://Resources/Fonts/keney_narrow_32.tres" type="DynamicFont" id=5]
[ext_resource path="res://Arena/Message.gd" type="Script" id=6]
[ext_resource path="res://Arena/BattleEngine.tscn" type="PackedScene" id=7]
[ext_resource path="res://Arena/Arena.gd" type="Script" id=8]
[ext_resource path="res://Arena/Assets/Engel.png" type="Texture" id=9]

[node name="Arena" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_vertical_guides_": [ 512.0 ]
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Alberich" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.611765 )
position = Vector2( 8, 3 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 608, 140 )

[node name="Engel" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.819608 )
position = Vector2( -8, 2 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( 200, 184 )

[node name="Player1" parent="." instance=ExtResource( 2 )]
position = Vector2( 314, 400 )
character_name = "Engel"
active = true
hit_points = 10
max_hit_points = 10

[node name="Player2" parent="." instance=ExtResource( 2 )]
position = Vector2( 710, 400 )
character_name = "Alberich"
order = 2
hit_points = 10
max_hit_points = 10
body_texture = ExtResource( 4 )
body_offset = Vector2( -10, 23 )

[node name="DemonPool" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 39 )

[node name="CubeSection" type="Node2D" parent="."]
position = Vector2( 511, 485 )

[node name="Cast" type="Button" parent="CubeSection"]
margin_left = 22.0
margin_top = 11.0
margin_right = 142.0
margin_bottom = 46.0
text = "Cast"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Roll" type="Button" parent="CubeSection"]
margin_left = -142.0
margin_top = 13.0
margin_right = -22.0
margin_bottom = 48.0
text = "Roll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CubesetPosition" type="Position2D" parent="CubeSection"]
position = Vector2( 0, -43 )

[node name="BattleEngine" parent="." instance=ExtResource( 7 )]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Message" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="HUD/Message"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -50.0
margin_bottom = 50.0
mouse_filter = 2
color = Color( 0.133333, 0.0235294, 0.0235294, 0.607843 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="HUD/Message"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -31.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 5 )
text = "Whatever"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
